--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Beetup</title>
+        <link rel="stylesheet" href="styles.css" />
         <script src="main.js"></script>
     </head>
     <body>
